# cpp_training

./: .gitmodules  CMakeLists.txt  IImage.hpp  Makefile  Mask.cpp  Mask.hpp  Region.cpp  Region.hpp  TODO  compile.sh  config.cpp  filebuffer.cpp  filebuffer.hpp  libpng_wrapper.cpp  loader.cpp  loader.hpp  main.cpp  mask.cpp  new_main.cpp  pixel.h  pixel_24.cpp  pixel_24.h  pixel_32.h  pixel_3x8.cpp  pixel_4x8.cpp  png.cpp  png.hpp  pngfile.cpp  region.cpp  toolchain.cmake
include/: IImage.hpp  Region.hpp  algorithms.h  allocator.h  color_space.h  config.h  double_linked_free_list.h  double_linked_region_list.h  dynamic_size_free_list.h  fallback_allocator.h  filebuffer.h  filebuffer.hpp  free_list.h  iimage.h  image.cpp  image.h  image_allocator.h  image_factory.h  image_file.h  image_file_factory.h  image_processing.h  image_processor.h  image_processor_allocator.h  image_processor_factory.h  image_storage_factory.h  libpng_wrapper.h  loader.h  logger.h  mallocator.h  mask.h  matrix.h  nullptr_allocator.h  object_allocator.h  pixel_1x1.h  pixel_1x16.h  pixel_1x2.h  pixel_1x4.h  pixel_1x8.h  pixel_2x16.h  pixel_2x8.h  (+16 more)
include/mm/: allocator.h  fallback_allocator.h  fixed_size_allocator.h  fixed_size_free_list.h  fixed_size_free_list.h.back  free_list.h  heap_image_allocator.h  mallocator.h  nullptr_allocator.h  object_allocator.h  pool_allocator.h  segregator_allocator.h  stack_allocator.h  stack_free_list.h
libs/: CMakeLists.txt
src/: config.cpp  double_linked_free_list.cpp  double_linked_region_list.cpp  image.cpp  image_allocator.cpp  image_factory.cpp  image_file_factory.cpp  image_processor.cpp  image_processor_factory.cpp  image_storage.cpp  image_storage_factory.cpp  libpng_wrapper.cpp  loader.cpp  logger.cpp  pixel_3x8.cpp  pixel_4x8.cpp  pngfile.cpp  region_factory.cpp  similar_region_search.cpp  srs_out_data.cpp  srs_test.cpp  srs_tests.cpp
src/mm/: double_linked_free_list.cpp
test/: CMakeLists.txt  algorithms_suite.cpp  configuration_suite.cpp  fallback_allocator_suite.cpp  filebuffer_suite.cpp  fixed_size_free_list_suite.cpp  free_list_suite.cpp  iimage_mock.h  image_allocator_suite.cpp  image_factory_suite.cpp  integration_test_suite.cpp  libpng_suite.cpp  main.cpp  mallocator_suite.cpp  mask_suite.cpp  nullptr_allocator_suite.cpp  pixel_suite.cpp  png_suite.cpp  region_factory_suite.cpp  region_suite.cpp  stack_allocator_suite.cpp
tools/: CMakeLists.txt  generate_data.cpp  laplacian_gen.cpp  main.cpp  pixel_operations.cpp  start_point.cpp
